AUTHORS: add @rjw57
Adding myself to AUTHORS as suggested in #12.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Priyesh Patel   priyesh@pexat.com
 Daniel Richman  main@danielrichman.co.uk
 Adam Greig      adam@adamgreig.com
+Rich Wareham    rich.cusf@richwareham.com
